--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 							<div class="logo_container">
 					<span class="logo_helper"></span>
 					<a href="https://thecowsfoundation.org/">
-						<img class="profile-picture" src="https://i.pinimg.com/736x/ba/f6/7f/baf67f00c3143663c7dfadda5d2b2a5f.jpg" alt="Team Vasundhara" id="logo" data-height-percentage="66" height="50" />
+						<!--<img class="profile-picture" src="https://i.pinimg.com/736x/ba/f6/7f/baf67f00c3143663c7dfadda5d2b2a5f.jpg" alt="Team Vasundhara" id="logo" data-height-percentage="66" />-->
 					</a>
 				</div>
         <h2>Team Vasundhara</h2>
